# RatDreamHackathon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ML.py  README.md  RPCclient.py  cardio_pb2.py  cardio_pb2_grpc.py  client.py  hello_pb2.py  hello_pb2_grpc.py  main.py  make.bat  pyproject.toml  rabbit.py  zip_to_iso.py
proto/: cardio.proto
ratdream/: __init__.py
ratdream/proto_generated/: __init__.py
