[tool.poetry]
name = "ratdream"
version = "0.1.0"
description = "Бекенд для цифрового прорыва"
authors = ["Timur <100406268+Timik232@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "<=3.17.3"
grpcio = "<=1.46.0"
grpcio-tools = "<=1.30.0"
pika = "<=1.2.0"
pyedflib = "<=0.1.38"

[tool.poetry.group.dev.dependencies]
pyinstaller = "<=4.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
